--- a/traitim.html
+++ b/traitim.html
@@ -536,7 +536,7 @@ var ParticlePool = (function() {
         align-items: center;
         justify-content: center;
         margin-bottom: 5px;
-        text-align: center;">Anh Yeu Em Ngoc Ha</div>
+        text-align: center;"></div>
 
  </BODY>
 
